server/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscout-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: subscout-server
  template:
    metadata:
      labels:
        app: subscout-server
    spec:
      containers:
      - name: subscout-server
        image: tilnel/subscout-server:3.0
        ports:
        - containerPort: 8080
