server/k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscout-server-service
spec:
  selector:
    app: subscout-server
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
